--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <table cellspacing="10" cellpadding="10" width="300">
     <tr class="har">
     <td></td><td></td>
-    <th><a href="home.html">HomeS</a></th>   <td></td> 
+    <th><a href="home.html">Home</a></th>   <td></td> 
     <th><a href="today_news.html">Today News</a></th><td></td>
     <th><a href="ugi.html">Ugi</a></th><td></td>
     <th><a href="Aktu.html">Aktu</a></th><td></td>
