--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
 <title>Home</title>
 <style>
+    body
+{
+background-image:url("9.jpg");
+background-position:right bottom;
+background-attachment:fixed;
+}
     .har
     {
         font-size:20px;
@@ -22,7 +28,7 @@
      
         </style>
 </head>
-<body background="9.jpg">
+<body>
     <div class="j">   
     <h3  bgcolor="white" ><a href="login.html">Sign in</a></h3>
     </div>
