--- a/Register.html
+++ b/Register.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <style>
+  body
+{
+background-image:url("9.jpg");
+background-position:right bottom;
+background-attachment:fixed;
+}
 a:link{color:rgb(21, 118, 135);}
 a:visited{color:rgb(4, 4, 4);}
 a:hover{color:rgb(30, 155, 155);}
@@ -8,7 +14,7 @@ a:active{color:rgba(224, 17, 151, 0.47);}
 </style>
 <title>Register</title>
 </head>
-<body background="4.jpg">
+<body>
 <br><br><br><br><br><br><br><br><br>
 <form method="get" action="">
 <table border=10 align="center"background="1.jpg" cellspacing=0>
