--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-attachment:fixed;
     }
     .w
     {
-        background-color:black;
+        background-color:ink blue;
     }
     .j{
         text-align:right;
