--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ background-attachment:fixed;
     }
     .w
     {
-        background-color:ink blue;
+        background-color:9BA3EB;
     }
     .j{
         text-align:right;
-        background-color:white;
+        background-color:9BA3EB;
       }
         a:link{color:rgb(21, 118, 135);}
         a:visited{color:rgb(125, 122, 122);}
