--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-attachment:fixed;
     }
     .w
     {
-        background-color:9BA3EB;
+        background-color:92B4EC;
     }
     .j{
         text-align:right;
