--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ background-attachment:fixed;
 </head>
 <body>
     <div class="j">   
-    <h3  bgcolor="white" ><a href="login.html">Sign in</a></h3>
+    <h3><a href="login.html">Sign in</a></h3>
     </div>
 <div class="w">
     <table cellspacing="10" cellpadding="10" width="300">
