--- a/login.html
+++ b/login.html
@@ -8,21 +8,43 @@ background-image:url("9.jpg");
 background-position:right bottom;
 background-attachment:fixed;
 }
+.ha{
+    margin:320px;
+    margin-top:230px
+}
+.as{
+    margin-left:44%;
+    background-color:#1c1e21 ;
+    width:300px;
+
+}
+.bx{
+    margin:0px;
+    border: solid ;
+}
+input[type]{
+    width:100%;
+    color:aliceblue;
+    background-color: #1c1e21;
+}
+.kl{
+    text-align:center;
+    color:aliceblue;
+}
+input[type]:hover{border-color: yellow;}
 </style>
 </head>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br>
-<form action="" method="get"><br><br>
-<table border=10 align="center" background="1.jpg">
-<tr>
-<td>Email ID:<input type="text" placeholder="xyz@gmail.com"></td>
-</tr>
-<tr><td>password:<input type="password"placeholder="password"></td>
-</tr>
-<tr><td align="center"><input type="submit"></td></tr>
-</table>
+<form class="ha" action="" method="get">
+<div class="as">
+    <div class="kl"><h1>Login</h1></div>
+<div class="bx"><input type="text" class="z" placeholder="Your Email*"></div>
+<div class="bx"><input type="password" class="z"placeholder="password"></div>
+<div class="bx" ><input type="submit" value="Login"></div>
 <a href="Register.html"><h5 align="center">create new account</h5></a>
+</div>
 </form>
+
 
 </body>
 </html>
