--- a/login.html
+++ b/login.html
@@ -8,43 +8,88 @@ background-image:url("9.jpg");
 background-position:right bottom;
 background-attachment:fixed;
 }
-.ha{
+.a{
     margin:320px;
-    margin-top:230px
+    margin-top:100px
 }
+.n{
+    text-decoration:none;
+    color:yellow;
+    font-weight:100px;
+
+}
+
+.aa:hover{background-color:yellow;}
+.n:hover{color:white;}
 .as{
-    margin-left:44%;
-    background-color:#1c1e21 ;
-    width:300px;
+    margin-left:40%;
+    margin-top:15%;
+    background-color:#000000;
+    border-radius:10px;
+        width:500px;
+        color:yellow;
+
+
+}
+.er:link{color:rgb(209, 247, 42); background-color: yellow;}
+.er:visited{color:rgb(4, 4, 4);}
+.er:hover{color:rgb(255, 255, 255);background-color: yellow;}
+.er:active{color:rgba(224, 17, 151, 0.47);}
+.aa{
+    width:248px;
+    size:20px;
+    text-align:center;
 
 }
 .bx{
     margin:0px;
-    border: solid ;
+    padding:10px;
 }
 input[type]{
     width:100%;
     color:aliceblue;
-    background-color: #1c1e21;
+    background-color: #262728;
 }
 .kl{
     text-align:center;
     color:aliceblue;
 }
 input[type]:hover{border-color: yellow;}
+.qw{
+    display:inline-flex;
+}
+.e
+{
+    width:px;
+    padding:10px;
+}
+.vx{
+    border-color:yellow;
+    padding-bottom:10px;
+    margin-left:8px;
+    margin-right:8px;
+    border-radius:44px;
+}
+input[class="y"]{border-radius:44px;}
+input[type=submit]:hover{background-color:yellow;}
+.er{color:black;
+    border-radius:0px;}
+input[class="z"]{
+    border-radius:44px;
+}
 </style>
 </head>
 <body>
 <form class="ha" action="" method="get">
 <div class="as">
-    <div class="kl"><h1>Login</h1></div>
+    <div class="qw">
+    <span class="aa"><a class="n" href="Register.html">Sign up</a></span></div>
+<div class="qw"><span class="aa"><a class="n" href="login.html">Log in</a></span></div>
+    <div class="kl"><h2>Login</h2></div>
 <div class="bx"><input type="text" class="z" placeholder="Your Email*"></div>
 <div class="bx"><input type="password" class="z"placeholder="password"></div>
-<div class="bx" ><input type="submit" value="Login"></div>
-<a href="Register.html"><h5 align="center">create new account</h5></a>
+<div class="vx" ><input class="y" type="submit" value="Log in"></div>
 </div>
 </form>
-
-
 </body>
 </html>
