--- a/login.html
+++ b/login.html
@@ -2,11 +2,12 @@
 <head>
 <title>login</title>
 <style>
-body
-{
-background-image:url("9.jpg");
-background-position:right bottom;
+body{
+background-image:url("17.png");
+background-position:top;
 background-attachment:fixed;
+background-repeat:none;
+margin-bottom:10000px;
 }
 .a{
     margin:320px;
