--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@ background-repeat:none;
     text-decoration:none;
     color:yellow;
     font-weight:100px;
+    font-size:30px;
 
 }
 
@@ -77,6 +78,33 @@ input[type=submit]:hover{background-color:yellow;}
 input[class="z"]{
     border-radius:44px;
 }
+.zz{
+    display:inline-flex;
+    width:164px;
+    margin-bottom:20px;
+}
+.kk{
+    margin:4px;
+    }
+.hh{
+    border-radius: 44px;
+    
+}
+.ha{
+    border-radius: 44px;
+}
+.hb{
+    border-radius: 44px;
+}
+input[class=hh]{
+    background-color: red;
+}
+input[class=ha]{
+    background-color: rgb(0, 204, 255);
+}
+input[class=hb]{
+    background-color: rgb(7, 7, 7);
+}
 </style>
 </head>
 <body>
@@ -89,6 +117,8 @@ input[class="z"]{
 <div class="bx"><input type="text" class="z" placeholder="Your Email*"></div>
 <div class="bx"><input type="password" class="z"placeholder="password"></div>
 <div class="vx" ><input class="y" type="submit" value="Log in"></div>
+<div align="center"><h1>OR</h1></div>
+<div class="kk"><span class="zz"><input class="hh" type="button" value="Google"></span><span class="zz"><input class="ha" type="button" value="facebook"></span><span class="zz"><input class="hb" type="button" value="Github"></span></div>
 </div>
 </form>
 </body>
