--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@ background-repeat:none;
 .n:hover{color:white;}
 .as{
     margin-left:40%;
-    margin-top:15%;
+    margin-top:10%;
     background-color:#000000;
     border-radius:10px;
         width:500px;
@@ -41,10 +41,6 @@ background-repeat:none;
     size:20px;
     text-align:center;
 
-}
-.bx{
-    margin:0px;
-    padding:10px;
 }
 input[type]{
     width:100%;
@@ -66,9 +62,6 @@ input[type]:hover{border-color: yellow;}
 }
 .vx{
     border-color:yellow;
-    padding-bottom:10px;
-    margin-left:8px;
-    margin-right:8px;
     border-radius:44px;
 }
 input[class="y"]{border-radius:44px;}
@@ -105,6 +98,22 @@ input[class=ha]{
 input[class=hb]{
     background-color: rgb(7, 7, 7);
 }
+.bb{
+    margin:20px;
+}
+.bx{margin-bottom: 10px;}
+input[class=z]{height: 35px;
+
+}
+input[class=hh]{height: 35px;
+
+}
+input[class=ha]{height: 35px;
+
+}
+input[class=hb]{height: 35px;
+
+}
 </style>
 </head>
 <body>
@@ -114,9 +123,10 @@ input[class=hb]{
     <span class="aa"><a class="n" href="Register.html">Sign up</a></span></div>
 <div class="qw"><span class="aa"><a class="n" href="login.html">Log in</a></span></div>
     <div class="kl"><h2>Log in</h2></div>
+    <div class="bb">
 <div class="bx"><input type="text" class="z" placeholder="Your Email*"></div>
 <div class="bx"><input type="password" class="z"placeholder="password"></div>
-<div class="vx" ><input class="y" type="submit" value="Log in"></div>
+<div class="vx" ><input class="z" type="submit" value="Log in"></div></div>
 <div align="center"><h1>OR</h1></div>
 <div class="kk"><span class="zz"><input class="hh" type="button" value="Google"></span><span class="zz"><input class="ha" type="button" value="facebook"></span><span class="zz"><input class="hb" type="button" value="Github"></span></div>
 </div>
