--- a/login.html
+++ b/login.html
@@ -14,21 +14,18 @@ background-repeat:none;
 }
 .n{
     text-decoration:none;
-    color:yellow;
+    color:rgb(0, 204, 255);
     font-weight:100px;
     font-size:30px;
 
 }
-
-.aa:hover{background-color:yellow;}
-.n:hover{color:white;}
 .as{
-    margin-left:40%;
+    margin-left:37%;
     margin-top:10%;
-    background-color:#000000;
+    background-color:#ffffff10;
     border-radius:10px;
         width:500px;
-        color:yellow;
+        color:rgb(0, 204, 255);
 
 
 }
@@ -40,96 +37,88 @@ background-repeat:none;
     width:248px;
     size:20px;
     text-align:center;
-
 }
-input[type]{
+input[class=z]{
     width:100%;
-    color:aliceblue;
-    background-color: #262728;
+    color:rgb(243, 243, 243);
+    background-color: #a6d6e9;
+    border-width:3px;
 }
 .kl{
     text-align:center;
     color:aliceblue;
 }
-input[type]:hover{border-color: yellow;}
+.z{font-size:15px;}
+#ty{font-size: 20px;}
+input[class=z]:hover{border-color:#001aff;}
 .qw{
     display:inline-flex;
 }
-.e
-{
-    width:px;
-    padding:10px;
-}
-.vx{
-    border-color:yellow;
-    border-radius:44px;
-}
-input[class="y"]{border-radius:44px;}
-input[type=submit]:hover{background-color:yellow;}
-.er{color:black;
-    border-radius:0px;}
-input[class="z"]{
-    border-radius:44px;
-}
 .zz{
     display:inline-flex;
-    width:164px;
     margin-bottom:20px;
 }
-.kk{
-    margin:4px;
-    }
-.hh{
+input[class="y"]{border-radius:44px;}
+input[class="z"]{border-radius:44px;}
+.hh{border-radius: 44px;}
+.ha{border-radius: 44px;}
+.hb{border-radius: 44px;}
+input[class=hh]{background-color: red;}
+input[class=ha]{background-color: rgb(0, 204, 255);}
+input[class=hb]{background-color: rgb(7, 7, 7);}
+.bb{margin:20px;}
+.bx{margin-bottom: 10px;}
+input[class=z]{height: 35px;}
+input[class=hh]{height: 35px; margin:2px;}
+input[class=ha]{height: 35px;}
+input[class=hb]{height: 35px;}
+.qw{margin-top:20px;}
+.aa{border-radius: 44px;;}
+.dd{color:white;}
+#ty{background-color:#008fc3}
+.bu{
     border-radius: 44px;
+    font-size:25px;
+    text-align:center;
+    background-color:transparent;
+
+}
+#kz{
+    width:145px;
+    color:white;
     
 }
-.ha{
-    border-radius: 44px;
+.bu{
+    width:248px;
+    color:rgb(0, 204, 255);
+    border-color:transparent;
 }
-.hb{
-    border-radius: 44px;
-}
-input[class=hh]{
-    background-color: red;
-}
-input[class=ha]{
-    background-color: rgb(0, 204, 255);
-}
-input[class=hb]{
-    background-color: rgb(7, 7, 7);
-}
-.bb{
-    margin:20px;
-}
-.bx{margin-bottom: 10px;}
-input[class=z]{height: 35px;
-
-}
-input[class=hh]{height: 35px;
-
-}
-input[class=ha]{height: 35px;
-
-}
-input[class=hb]{height: 35px;
-
-}
+.bu:hover{background-color:rgb(0, 204, 255);color:white;}
+#ty{height:50px;
+border-width:3px;}
+.kz{ width:150px;}
+.bb{margin-bottom:200px;}
+input[type]:hover{border-color:rgb(0, 204, 255);}
 </style>
 </head>
 <body>
 <form class="ha" action="" method="get">
 <div class="as">
     <div class="qw">
-    <span class="aa"><a class="n" href="Register.html">Sign up</a></span></div>
-<div class="qw"><span class="aa"><a class="n" href="login.html">Log in</a></span></div>
-    <div class="kl"><h2>Log in</h2></div>
+    <span class="aa"><a href="Register.html"><input class="bu" type="botton" value="Sign up"></a></span></div>
+<div class="qw"><span class="aa"><a href="login.html"><input class="bu" type="botton" value="Log in"></a></span></div>
+    <div class="kl"><h1>Log in</h1></div>
     <div class="bb">
-<div class="bx"><input type="text" class="z" placeholder="Your Email*"></div>
-<div class="bx"><input type="password" class="z"placeholder="password"></div>
-<div class="vx" ><input class="z" type="submit" value="Log in"></div></div>
-<div align="center"><h1>OR</h1></div>
-<div class="kk"><span class="zz"><input class="hh" type="button" value="Google"></span><span class="zz"><input class="ha" type="button" value="facebook"></span><span class="zz"><input class="hb" type="button" value="Github"></span></div>
+<div class="bx"><input type="text" class="z" placeholder="  Your Email*"></div>
+<div class="bx"><input type="password" class="z"placeholder="  password*"></div>
+<div class="vx" ><input class="z" id="ty" type="submit" value="Log in"></div>
+<div align="center" class="dd"><h1>OR</h1></div>
+<div class="kk">
+    <span class="zz"><a href="https://www.google.com/accounts/Login"><input class="hh"  id="kz" type="button" value="Google"></a></span>
+    <span class="zz"><a href="https://www.facebook.com/"><input id="kz" class="ha" type="button" value="facebook"></a></span>
+    <span class="zz"><a href="https://github.com/"><input id="kz" class="hb" type="button" value="Github"></a></span>
 </div>
+</div></div>
 </form>
 </body>
 </html>
