--- a/Register.html
+++ b/Register.html
@@ -8,62 +8,54 @@ background-position:top;
 background-attachment:fixed;
 background-repeat:none;
 }
-a:link{color:rgb(21, 118, 135);}
-a:visited{color:rgb(245, 245, 245);}
-a:hover{color:rgb(30, 155, 155);}
-a:active{color:rgba(224, 17, 151, 0.47);}
-.red{
-  margin-left:42%;
-    margin-top:15%;
-    width:320px;
-    background-color:black;
+.as{
+    margin-left:37%;
+    margin-top:10%;
+    background-color:#ffffff10;
     border-radius:10px;
+        width:500px;
+        color:rgb(0, 204, 255);
 }
-input[type]{
-  margin:2px;
-  margin-right:2px;
-  width:100%;
-  color:white;
-  background-color:rgb(54, 53, 53);
-  border-radius:44px;
-}
-.h1{color:aliceblue;
-text-align:center;}
-.q{
-  margin:5px;
-}
-.w{
-  margin-left:2px;
-}
-.s{color:white;
-  background-color:rgb(54, 53, 53);
-  border-radius:44px;}
-.j{
-  color:white;
-  display:inline-flex;
-
-}
-h3{
-  margin-left:70px;
+.b{display:inline-flex;}
+.c{width:238px;font-size:25px;
+   border-radius:44px;
+   text-align:center; 
+   background-color:transparent; 
+   color:rgb(0, 204, 255);
+   border-color:transparent;}
+   .c:hover{background-color: rgb(0, 204, 255);color:white;}
+.a{margin:10px;}
+.d{width:100%;
+padding:10px; 
+border-radius: 44px;
+background-color: #a6d6e9; 
+margin:4px; 
+border-width:3px; 
+border-color:black;
 }
 </style>
 <title>Register</title>
 </head>
 <body>
-  <div class="red">
-    <div class="j"><span ><a href="Register.html"><h3>sign up</h3></a></span><span><a href="login.html"><h3>Log in</h3></a></span></div>
-<form method="get" action="">
-<div><h2 class="h1">Sign up for Free</h2></div>
-<div class="q">
-<div><input type="text" placeholder="First Name"></div>
-<div><input type="text"placeholder="Last Name"></div>
-<div><input type="email"placeholder="email ID"></div>
-<div><input type="password" placeholder="password"></div>
-<div class="w"><select class="s"><option>UCER</option><option>UIT</option><option>UCEM</option><option>UIM</option></select></div>
-<div><input type="submit" value="sign up"></div>
-</div>
-</form>
-</div>
+  <div class="as">
+    <div class="a">
+     <div>
+          <span class="b"><a href="Register.html"><input class="c" type="botton" value="Sign up"></a></span>
+          <span class="b"><a href="login.html"><input class="c" type="botton" value="Log in"></a></span>
+      </div>
+      <form method="get" action="">
+      <div><h1 align="center">Sign up</h1></div>
+      <div class="q">
+           <div><input class="d" type="text" placeholder="First Name"></div>
+           <div><input class="d" type="text"placeholder="Last Name"></div>
+           <div><input class="d" type="email"placeholder="email ID"></div>
+           <div><input class="d" type="password" placeholder="password"></div>
+           <div><select class="d"><option>UCER</option><option>UIT</option><option>UCEM</option><option>UIM</option></select></div>
+           <div><input class="d" type="submit" value="sign up"></div>
+      </div>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
 
