--- a/login.html
+++ b/login.html
@@ -99,6 +99,15 @@ border-width:3px;}
 .kz{ width:150px;}
 .bb{margin-bottom:200px;}
 input[type]:hover{border-color:rgb(0, 204, 255);}
+#ll{border-top:transparent;
+border-left:transparent;
+border-right:transparent;
+background-color:transparent;
+border-bottom-color:rgb(150, 226, 245);
+border-width:5px;}
+#ll:hover{border-bottom-color:rgb(0, 204, 255);}
+#ll:focus{border-color:rgb(0, 204, 255);}
+
 </style>
 </head>
 <body>
@@ -109,8 +118,8 @@ input[type]:hover{border-color:rgb(0, 204, 255);}
 <div class="qw"><span class="aa"><a href="login.html"><input class="bu" type="botton" value="Log in"></a></span></div>
     <div class="kl"><h1>Log in</h1></div>
     <div class="bb">
-<div class="bx"><input type="text" class="z" placeholder="  Your Email*"></div>
-<div class="bx"><input type="password" class="z"placeholder="  password*"></div>
+<div class="bx"><input type="text" id="ll" class="z" placeholder="  Your Email*"></div>
+<div class="bx"><input type="password" id="ll" class="z"placeholder="  password*"></div>
 <div class="vx" ><input class="z" id="ty" type="submit" value="Log in"></div>
 <div align="center" class="dd"><h1>OR</h1></div>
 <div class="kk">
