--- a/Register.html
+++ b/Register.html
@@ -43,6 +43,9 @@ border-radius:100px;
 font-size: 25px;}
 .d:hover{border-color:rgb(0, 204, 255);}
 input[class="d"]:focus{border-color:rgb(0, 204, 255);}
+.q{text-align: center;
+color:white; margin-top:20px;}
+.v{display:inline-flex;width:240px}
 </style>
 <title>Register</title>
 </head>
@@ -54,10 +57,10 @@ input[class="d"]:focus{border-color:rgb(0, 204, 255);}
           <span class="b"><a href="login.html"><input class="c" type="botton" value="Log in"></a></span>
       </div>
       <form method="get" action="">
-      <div><h1 align="center">Sign up</h1></div>
+      <div><h1 class="q">Sign up</h1></div>
       <div class="q">
-           <div><input class="d" type="text" placeholder="  First Name*"></div>
-           <div><input class="d" type="text"placeholder="  Last Name*"></div>
+           <div><span class="v"><input class="d" type="text" placeholder="  First Name*"></span><span class="v">
+           <input class="d" type="text"placeholder="  Last Name*"></span></div>
            <div><input class="d" type="text"placeholder="  Phone no.*"></div>
            <div><input class="d" type="email"placeholder="  Email ID*"></div>
            <div><input class="d" type="password" placeholder="  Password*"></div>
