--- a/Register.html
+++ b/Register.html
@@ -1,53 +1,7 @@
 <html>
 <head>
-<style>
-  body
-{
-  background-image:url("17.png");
-background-position:top;
-background-attachment:fixed;
-background-repeat:none;
-}
-.as{
-    margin-left:37%;
-    margin-top:10%;
-    background-color:#ffffff10;
-    border-radius:10px;
-        width:500px;
-        color:rgb(0, 204, 255);
-}
-.b{display:inline-flex;}
-.c{width:238px;font-size:25px;
-   border-radius:44px;
-   text-align:center; 
-   background-color:transparent; 
-   color:rgb(0, 204, 255);
-   border-color:transparent;}
-   .c:hover{background-color: rgb(0, 204, 255);color:white;}
-.a{margin:10px;}
-.d{width:100%;
-padding:10px; 
-border-radius: 44px;
-background-color:transparent; 
-margin:4px; 
-border-width:5px; 
-border-color:black;
-color:white;
-border-top:transparent;
-border-left:transparent;
-border-right:transparent;
-border-bottom-color:rgb(157, 245, 245);
-}
-#f{background-color:rgb(0, 204, 255);
-border-radius:100px;
-font-size: 25px;}
-.d:hover{border-color:rgb(0, 204, 255);}
-input[class="d"]:focus{border-color:rgb(0, 204, 255);}
-.q{text-align: center;
-color:white; margin-top:20px;}
-.v{display:inline-flex;width:240px}
-</style>
 <title>Register</title>
+<link rel="stylesheet" href="reg.css">
 </head>
 <body>
   <div class="as">
@@ -59,7 +13,7 @@ color:white; margin-top:20px;}
       <form method="get" action="">
       <div><h1 class="q">Sign up</h1></div>
       <div class="q">
-           <div><span class="v"><input class="d" type="text" placeholder="  First Name*"></span><span class="v">
+           <div><span class="v"><input class="d" type="text" placeholder="  First Name* "></span><span class="v">
            <input class="d" type="text"placeholder="  Last Name*"></span></div>
            <div><input class="d" type="text"placeholder="  Phone no.*"></div>
            <div><input class="d" type="email"placeholder="  Email ID*"></div>
