--- a/login.html
+++ b/login.html
@@ -1,126 +1,21 @@
 <html>
 <head>
 <title>login</title>
-<style>
-body{
-background-image:url("17.png");
-background-position:top;
-background-attachment:fixed;
-background-repeat:none;
-}
-.a{
-    margin:320px;
-    margin-top:100px
-}
-.n{
-    text-decoration:none;
-    color:rgb(0, 204, 255);
-    font-weight:100px;
-    font-size:30px;
-
-}
-.as{
-    margin-left:37%;
-    margin-top:10%;
-    background-color:#ffffff10;
-    border-radius:10px;
-        width:500px;
-        color:rgb(0, 204, 255);
-
-
-}
-.er:link{color:rgb(209, 247, 42); background-color: yellow;}
-.er:visited{color:rgb(4, 4, 4);}
-.er:hover{color:rgb(255, 255, 255);background-color: yellow;}
-.er:active{color:rgba(224, 17, 151, 0.47);}
-.aa{
-    width:248px;
-    size:20px;
-    text-align:center;
-}
-input[class=z]{
-    width:100%;
-    color:rgb(243, 243, 243);
-    background-color: #a6d6e9;
-    border-width:3px;
-}
-.kl{
-    text-align:center;
-    color:aliceblue;
-}
-.z{font-size:15px;}
-#ty{font-size: 20px;}
-input[class=z]:hover{border-color:#001aff;}
-.qw{
-    display:inline-flex;
-}
-.zz{
-    display:inline-flex;
-    margin-bottom:20px;
-}
-input[class="y"]{border-radius:44px;}
-input[class="z"]{border-radius:44px;}
-.hh{border-radius: 44px;}
-.ha{border-radius: 44px;}
-.hb{border-radius: 44px;}
-input[class=hh]{background-color: red;}
-input[class=ha]{background-color: rgb(0, 204, 255);}
-input[class=hb]{background-color: rgb(7, 7, 7);}
-.bb{margin:20px;}
-.bx{margin-bottom: 10px;}
-input[class=z]{height: 35px;}
-input[class=hh]{height: 35px; margin:2px;}
-input[class=ha]{height: 35px;}
-input[class=hb]{height: 35px;}
-.qw{margin-top:20px;}
-.aa{border-radius: 44px;;}
-.dd{color:white;}
-#ty{background-color:#008fc3}
-.bu{
-    border-radius: 44px;
-    font-size:25px;
-    text-align:center;
-    background-color:transparent;
-
-}
-#kz{
-    width:145px;
-    color:white;
-    
-}
-.bu{
-    width:248px;
-    color:rgb(0, 204, 255);
-    border-color:transparent;
-}
-.bu:hover{background-color:rgb(0, 204, 255);color:white;}
-#ty{height:50px;
-border-width:3px;}
-.kz{ width:150px;}
-.bb{margin-bottom:200px;}
-input[type]:hover{border-color:rgb(0, 204, 255);}
-#ll{border-top:transparent;
-border-left:transparent;
-border-right:transparent;
-background-color:transparent;
-border-bottom-color:rgb(150, 226, 245);
-border-width:5px;}
-#ll:hover{border-bottom-color:rgb(0, 204, 255);}
-#ll:focus{border-color:rgb(0, 204, 255);}
-
-</style>
+<link rel="stylesheet" href="log.css">
 </head>
 <body>
+    <div></div>
 <form class="ha" action="" method="get">
 <div class="as">
     <div class="qw">
-    <span class="aa"><a href="Register.html"><input class="bu" type="botton" value="Sign up"></a></span></div>
-<div class="qw"><span class="aa"><a href="login.html"><input class="bu" type="botton" value="Log in"></a></span></div>
+    <span class="aa"><a href="Register.html"><input class="bu" type="button" value="Sign up"></a></span></div>
+<div class="qw"><span class="aa"><a href="login.html"><input class="bu" type="button" value="Log in"></a></span></div>
     <div class="kl"><h1>Log in</h1></div>
     <div class="bb">
-<div class="bx"><input type="text" id="ll" class="z" placeholder="  Your Email*"></div>
+<div class="bx"><input type="text" id="ll" class="z" placeholder="  Email*"></div>
 <div class="bx"><input type="password" id="ll" class="z"placeholder="  password*"></div>
 <div class="vx" ><input class="z" id="ty" type="submit" value="Log in"></div>
+<div class="kk"><a class="gg" href="">forget password?</a></div>
 <div align="center" class="dd"><h1>OR</h1></div>
 <div class="kk">
     <span class="zz"><a href="https://www.google.com/accounts/Login"><input class="hh"  id="kz" type="button" value="Google"></a></span>
