--- a/index.html
+++ b/index.html
@@ -1,42 +1,7 @@
 <html>
 <head>
 <title>Home</title>
-<style>
-     .ls{
-	background-color:black;
-	border:4px double pink;
-	margin-top:100%;
-	}
-    .it
-    {
-        font-size:20px;
-    }
-    .w
-    {
-        background-color:pink;
-	border:4px double white;
-	box-shadow:10px 10px orange;
-    }
-    .j
-      {
-        text-align:right;
-        background-color:cyan;
-	color="blue";
-      }
-        a:link{color:blue;}
-        a:visited{color:rgb(125, 122, 122);}
-        a:hover{color:rgb(246, 250, 247);}
-        a:active{color:rgba(224, 17, 151, 0.47);}
-     body
-	{
-	 background-image: url("67.jpg");
-	 background-position: center;
-	 background-repeat: no-repeat;
-	 background-attachment: fixed;
-	 background-size: cover;
-	}
-
-</style>
+<link rel="stylesheet" href="ind.css">
 </head>
 <body>      
     <div class="j">   
@@ -46,12 +11,12 @@
     <table cellspacing="10" cellpadding="10" width="300">
     <tr class="it">
     <td></td><td></td>
-    <th><a href="home.html">Home</a></th>   <td></td> 
-    <th><a href="today_news.html">Today_News</a></th><td></td>
-    <th><a href="ugi.html">Ugi</a></th><td></td>
-    <th><a href="Aktu.html">Aktu</a></th><td></td>
-    <th><a href="About_us.html">About_us</a></th>
-    <th><a href="Events.html">Event</a></th>
+    <th><a  class="z" href="home.html">Home</a></th>   <td></td> 
+    <th><a class="z" href="today_news.html">Today_News</a></th><td></td>
+    <th><a class="z" href="ugi.html">Ugi</a></th><td></td>
+    <th><a class="z" href="Aktu.html">Aktu</a></th><td></td>
+    <th><a class="z" href="About_us.html">About_us</a></th>
+    <th><a class="z" href="Events.html">Event</a></th>
     </tr>
     </table>
         </div>
