--- a/Register.html
+++ b/Register.html
@@ -7,8 +7,8 @@
   <div class="as">
     <div class="a">
      <div>
-          <span class="b"><a href="Register.html"><input class="c" type="botton" value="Sign up"></a></span>
-          <span class="b"><a href="login.html"><input class="c" type="botton" value="Log in"></a></span>
+          <span class="b"><a href="Register.html"><input class="c" type="button" value="Sign up"></a></span>
+          <span class="b"><a href="login.html"><input class="c" type="button" value="Log in"></a></span>
       </div>
       <form method="get" action="">
       <div><h1 class="q">Sign up</h1></div>
